# spbu_c_homeworks

./: CMakeLists.txt
final/: task1.c  task2.c  task3.c
homework1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework2/: task_1.c  task_2.c
homework3/: task_1.c  task_2.c  task_3.c
homework4/: task_1.c  task_2.md
homework5/: task_1.c
homework7/: task_1.c
homework8/: task.c
retest1/: task1.c  task3.c
test1/: task1.c  task2.c
test2/: task2.c  task3.c  task_1.c
